feature-A001-code-refactoring Moved static logic into RentalInfoHelper
- Static methods were moved to a separate helper class
- Helper class covered with tests
- Renamed some of the variables and methods to promote uniform and explicit naming conventions